--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+1-31 [时事大家谈：中国抗疫“太好”反陷入困境？](/articles/voa/1043328.md)
+
+1-30 [王一梁病逝 折射流亡作家颠沛的一生](/articles/voa/1043329.md)
+
 1-30 [世卫专家访问武汉金银潭医院，中国官方全程严控](/articles/voa/1043330.md)
 
 1-30 [小米美国兴讼要求从“黑名单](/articles/voa/1043331.md)
@@ -596,8 +600,4 @@
 1-19 [中国称粮食安全无虞 学者：仍须防范恐慌、资本炒作和粮仓管理](/articles/voa/1043626.md)
 
 1-19 [就职前夜 拜登与哈里斯将为疫情死难者点灯](/articles/voa/1043627.md)
-
-1-19 [特朗普宣布要解除部分国际旅行禁令 中国例外 拜登上任后拟维持禁令](/articles/voa/1043628.md)
-
-1-19 [特朗普下令联邦政府各部门限期决定停用敌对国家制造的无人机](/articles/voa/1043629.md)
 
