--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+1-30 [水瓶纪元 | 一味纠正“女性化”、倡导“阳刚之气”会产生什么问题？](/articles/cdt/386391.md)
+
 1-30 [王昊轩 | 个人为什么不能发政治，经济等原创内容？](/articles/cdt/386392.md)
 
 1-30 [真实故事计划 | 打工人第一次在北上广过年](/articles/cdt/386397.md)
@@ -598,6 +600,4 @@
 12-31 [记录者刘杰 | 临汾：雷霆出击，冒着严寒没收百姓煤炭，拆取暖炉子](/articles/cdt/387678.md)
 
 12-31 [二湘的九维空间 | 艾芬：再见2020](/articles/cdt/387681.md)
-
-12-30 [德国之声｜坚不认罪 张展当庭挑战法官](/articles/cdt/387693.md)
 
