--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+1-31 [时事大家谈：南非新冠变体疫苗难防？](/articles/voa/1043326.md)
+
+1-31 [中港抵制BNO护照，英国表态：立场不动摇](/articles/voa/1043327.md)
+
 1-31 [时事大家谈：中国抗疫“太好”反陷入困境？](/articles/voa/1043328.md)
 
 1-30 [王一梁病逝 折射流亡作家颠沛的一生](/articles/voa/1043329.md)
@@ -596,8 +600,4 @@
 1-20 [中国进入近10个月来最严重疫情爆发期 一独立小组报告问责中国和世卫](/articles/voa/1043624.md)
 
 1-19 [拜登上任首日将提议案：1100万非法移民可5年合法 8年入籍](/articles/voa/1043625.md)
-
-1-19 [中国称粮食安全无虞 学者：仍须防范恐慌、资本炒作和粮仓管理](/articles/voa/1043626.md)
-
-1-19 [就职前夜 拜登与哈里斯将为疫情死难者点灯](/articles/voa/1043627.md)
 
