--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+1-31 [葡萄牙通过法律 成为欧盟第4个安乐死合法化国家](/articles/rfi/1035602.md)
+
 1-30 [阿富汗东部自杀炸弹攻击8人丧命 塔利班扛责 – 法国国际广播电台 - RFI](/articles/rfi/1035603.md)
 
 1-30 [立陶宛禁止机场使用中国监视设备](/articles/rfi/1035604.md)
@@ -598,6 +600,4 @@
 1-26 [莫德纳：疫苗对英国和南非变种病毒皆具防护力](/articles/rfi/1035900.md)
 
 1-26 [美国总统拜登周一将正式恢复对一些国家的旅行限制](/articles/rfi/1035901.md)
-
-1-26 [克里在首届气候适应峰会上的遗憾](/articles/rfi/1035902.md)
 
