--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-31 [路透社：COVID-19病毒测试盒提供商华大基因与中国军方关系深厚](/articles/voa/1043325.md)
+
 1-31 [时事大家谈：南非新冠变体疫苗难防？](/articles/voa/1043326.md)
 
 1-31 [中港抵制BNO护照，英国表态：立场不动摇](/articles/voa/1043327.md)
@@ -598,6 +600,4 @@
 1-20 [拜登内阁主将今到参议院作证 誓言“战胜中国”](/articles/voa/1043623.md)
 
 1-20 [中国进入近10个月来最严重疫情爆发期 一独立小组报告问责中国和世卫](/articles/voa/1043624.md)
-
-1-19 [拜登上任首日将提议案：1100万非法移民可5年合法 8年入籍](/articles/voa/1043625.md)
 
