--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+1-31 [经观报书评 | 思想史学者林毓生：中国近代思想中的反传统思潮如何影响了历史？](/articles/cdt/386379.md)
+
 1-31 [【网络民议】中国当局把WHO专家安排得明明白白，家属被封口](/articles/cdt/386386.md)
 
 1-31 [【CDT连载】巴奴的救赎（28·终）](/articles/cdt/386389.md)
@@ -598,6 +600,4 @@
 12-31 [全现在｜李文亮离开近一年，武汉人的伤口还未痊愈](/articles/cdt/387675.md)
 
 12-31 [看客inSight | 我在9个蛋壳微信群里，遇见上千名有家难归的人](/articles/cdt/387676.md)
-
-12-31 [C计划｜2020年朋友圈撕裂报告](/articles/cdt/387677.md)
 
