--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+1-31 [英国下周一将申请加入CPTPP](/articles/rfi/1035590.md)
+
+1-31 [苏利文再发言谈对华战略 美智库发“更长的电报”引关注 - 要闻分析](/articles/rfi/1035591.md)
+
 1-31 [新冠病毒疫情：欧洲堪忧 美国出现缓解迹象](/articles/rfi/1035592.md)
 
 1-31 [法国多个城市爆发示威反对整体安全法案](/articles/rfi/1035593.md)
@@ -596,8 +600,4 @@
 1-26 [拜登签行政命令促买国货 盼提振美国制造业 – 法国国际广播电台 - RFI](/articles/rfi/1035888.md)
 
 1-26 [拜登对疫苗接种进度有信心 料美国今夏接近群体免疫 – 法国国际广播电台 - RFI](/articles/rfi/1035889.md)
-
-1-26 [弹劾川普条文 正式送达美参院 – 法国国际广播电台 - RFI](/articles/rfi/1035890.md)
-
-1-26 [墨西哥电信大亨史林染疫 症状轻微 – 法国国际广播电台 - RFI](/articles/rfi/1035891.md)
 
