--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -11,6 +11,8 @@
 
 1-30 [王昊轩 | 个人为什么不能发政治，经济等原创内容？](/articles/cdt/386392.md)
 
+1-31 [3号厅检票员工 | 我还是你们骂的娘炮](/articles/cdt/386394.md)
+
 1-30 [真实故事计划 | 打工人第一次在北上广过年](/articles/cdt/386397.md)
 
 1-30 [【异闻观止】广州11个区一个月内“无婚可离”](/articles/cdt/386398.md)
@@ -598,6 +600,4 @@
 12-31 [【图说天朝】2020年那些“不正确的视觉记忆”](/articles/cdt/387672.md)
 
 12-31 [全现在｜李文亮离开近一年，武汉人的伤口还未痊愈](/articles/cdt/387675.md)
-
-12-31 [看客inSight | 我在9个蛋壳微信群里，遇见上千名有家难归的人](/articles/cdt/387676.md)
 
