--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+1-31 [脱欧1年 英国将正式申请加入CPTPP – 法国国际广播电台 - RFI](/articles/rfi/1035588.md)
+
 1-31 [遏阻疫情  美CDC下令大众运输系统强制戴口罩 – 法国国际广播电台 - RFI](/articles/rfi/1035589.md)
 
 1-31 [英国下周一将申请加入CPTPP](/articles/rfi/1035590.md)
@@ -598,6 +600,4 @@
 1-26 [极右翼团体骄傲男孩 加拿大国会吁列为恐怖组织 – 法国国际广播电台 - RFI](/articles/rfi/1035886.md)
 
 1-26 [不敌疫情寒冬 Godiva北美128间门市歇业或转售 – 法国国际广播电台 - RFI](/articles/rfi/1035887.md)
-
-1-26 [拜登签行政命令促买国货 盼提振美国制造业 – 法国国际广播电台 - RFI](/articles/rfi/1035888.md)
 
