--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-31 [世卫专家组即将访问最早发现新冠病毒的武汉市场](/articles/voa/1043321.md)
+
 1-31 [美疾控中心：搭乘公交必须戴口罩](/articles/voa/1043322.md)
 
 1-31 [巴基斯坦将获英国研制疫苗](/articles/voa/1043323.md)
@@ -598,6 +600,4 @@
 1-20 [春节临近，台湾针对机场防护举行军事对抗演练](/articles/voa/1043619.md)
 
 1-20 [《全球风险报告》称新冠疫情加剧美中竞争 世界需警惕长期风险](/articles/voa/1043620.md)
-
-1-20 [不同于低调的彭斯 哈里斯将涉入拜登政府所有议题，包括中国](/articles/voa/1043621.md)
 
