--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+1-31 [日本首次发生变异新冠病毒聚集性感染](/articles/rfi/1035575.md)
+
+1-31 [桃医群聚感染延烧第二家医院护理师全家六口确诊婆婆死亡](/articles/rfi/1035576.md)
+
+1-31 [「隔离」7天的电影节 瑞典护理师前进小岛独观影 – 法国国际广播电台 - RFI](/articles/rfi/1035577.md)
+
+1-31 [印度总统称已强化中印喜马拉雅山边境军力 - 法国报纸摘要](/articles/rfi/1035578.md)
+
 1-31 [美媒：川普弹劾辩护律师团队5人离职 – 法国国际广播电台 - RFI](/articles/rfi/1035579.md)
 
 1-31 [今日起BNO护照作废乘客航空公司须检视有效证件](/articles/rfi/1035580.md)
@@ -592,12 +600,4 @@
 1-26 [香港制造遭制裁诉至世贸 美国阻止成立专家组审理此争端](/articles/rfi/1035873.md)
 
 1-26 [法文化部长：庞毕度中心2023年起关馆整修4年 – 法国国际广播电台 - RFI](/articles/rfi/1035874.md)
-
-1-26 [中国官方称习近平与巴赫通话 北京冬奥如期办](/articles/rfi/1035875.md)
-
-1-26 [疫情遏制有力 越南经济实现GDP2.9％增长](/articles/rfi/1035876.md)
-
-1-26 [达沃斯视频演讲 美媒说习近平向拜登发出隐晦警告](/articles/rfi/1035877.md)
-
-1-26 [叶伦获美参议院确认财长任命 修复贸易战关系损害但坚持对华强硬](/articles/rfi/1035878.md)
 
