--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-31 [新冠疫情回头 中国一月份工厂复苏放缓](/articles/voa/1043318.md)
+
 1-31 [英国准备正式申请加入跨太平洋贸易区](/articles/voa/1043319.md)
 
 1-31 [世卫专家组访问最早发现新冠病毒的武汉市场](/articles/voa/1043320.md)
@@ -598,6 +600,4 @@
 1-20 [国家媒体：伊拉克把选举推迟四个月](/articles/voa/1043616.md)
 
 1-20 [蓝普顿：拜登就职演说或将定位美中的“合作竞争”关系](/articles/voa/1043617.md)
-
-1-20 [特朗普政府宣布中国在新疆犯下种族灭绝和反人类罪](/articles/voa/1043618.md)
 
