--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+1-31 [声援反对派 数百名俄罗斯示威民众被拘](/articles/dw/1044145.md)
+
+1-31 [拉丁美洲抗击新冠奇闻“疫”事](/articles/dw/1044146.md)
+
 1-31 [世卫专家进入武汉华南海鲜市场考察](/articles/dw/1044147.md)
 
 1-31 [拉丁美洲抗击新冠奇闻”疫”事](/articles/dw/1044148.md)
@@ -596,8 +600,4 @@
 1-16 [德语媒体：疫情源头 世纪之问](/articles/dw/1044443.md)
 
 1-15 [香港公务员须宣誓效忠港府   拒绝或被炒鱿鱼](/articles/dw/1044444.md)
-
-1-15 [育儿补贴丑闻之下 荷兰内阁集体辞职](/articles/dw/1044445.md)
-
-1-15 [语言学家：特朗普如何操控支持者？](/articles/dw/1044446.md)
 
