--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-31 [美学者建议：体现美国多样化优势，拜登应任命黑人驻华大使](/articles/voa/1043315.md)
+
 1-31 [中国的抗疫绝招与人类文明的反差](/articles/voa/1043316.md)
 
 1-31 [英国为香港居民开放成为公民的特别签证途径](/articles/voa/1043317.md)
@@ -598,6 +600,4 @@
 1-20 [美国新总统就职 仪式规模将缩小安全措施已加大](/articles/voa/1043613.md)
 
 1-20 [联邦当局逮捕一名被控策划袭击纽约市9/11纪念园的美军士兵](/articles/voa/1043614.md)
-
-1-20 [美参议院共和党领袖：特朗普“挑动”国会骚乱](/articles/voa/1043615.md)
 
