--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+1-31 [不满被“拉黑” 小米状告美国防部和财政部](/articles/dw/1044142.md)
+
 1-31 [墙外文摘：不再承认 BNO，外交部“颠覆政权”？](/articles/dw/1044143.md)
 
 1-31 [新政生效 BNO港人即日起可申请英国居留签证](/articles/dw/1044144.md)
@@ -598,6 +600,4 @@
 1-16 [美国大猩猩感染新冠 世界首例？](/articles/dw/1044440.md)
 
 1-16 [拜登推出1.9万亿美元经济刺激计划](/articles/dw/1044441.md)
-
-1-16 [评论：特朗普被推特禁言不同于中国的审查](/articles/dw/1044442.md)
 
