--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-1 [奇客资讯｜ 中国社交平台要求公众账号获得相关资质](/articles/cdt/386342.md)
+
 2-1 [南方周末 |输入法会“背叛”我们吗？](/articles/cdt/386343.md)
 
 2-1 [美国之音 | 许志永丁家喜证实遭受酷刑 家人斥无人性誓追究作恶者](/articles/cdt/386344.md)
@@ -598,6 +600,4 @@
 1-1 [【CDTV】波特王｜十二月粉红月报：寻人启事！粉红们通通出来面对！](/articles/cdt/387613.md)
 
 1-1 [【CDT敏感词周报】张展、阿里巴巴、腊肉节、李文亮](/articles/cdt/387623.md)
-
-12-31 [【麻辣总局】2020年度“搞笑”：最大的搞笑源自现实](/articles/cdt/387643.md)
 
