--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-1 [加拿大暂停飞墨西哥和加勒比海航线](/articles/rfi/1035553.md)
+
+2-1 [白俄罗斯反对派领袖季哈诺夫斯卡娅获提名诺奖](/articles/rfi/1035554.md)
+
+2-1 [诺贝尔和平奖提名今截止 被提名者真不少](/articles/rfi/1035555.md)
+
 2-1 [“普京宫殿”被一名普京亲信亿万富豪出面认领](/articles/rfi/1035556.md)
 
 2-1 [动物乐团初代吉他手希尔顿瓦伦坦辞世 – 法国国际广播电台 - RFI](/articles/rfi/1035557.md)
@@ -594,10 +600,4 @@
 1-26 [爱心食堂演唱组今年推出“与你在一起”为主题的义演节目 - 法国风土人情](/articles/rfi/1035851.md)
 
 1-26 [马克龙借达沃斯宣扬法国振兴计划，呼吁欧洲战略自主](/articles/rfi/1035852.md)
-
-1-26 [拜登也是“尴尬”手表哥？](/articles/rfi/1035853.md)
-
-1-26 [国庆日挨批「入侵日」 澳洲人不顾防疫上街示威 – 法国国际广播电台 - RFI](/articles/rfi/1035854.md)
-
-1-26 [万事达卡调高英国持卡人欧盟网购交换费 – 法国国际广播电台 - RFI](/articles/rfi/1035855.md)
 
