--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-1 [法国学者：特朗普对华政策阻碍了中国实力的壮大 - 公民论坛](/articles/rfi/1035548.md)
+
 2-1 [德国卫生部长对俄国和中国疫苗持开放态度](/articles/rfi/1035549.md)
 
 2-1 [波兰总统签署与台湾刑事司法合作协定](/articles/rfi/1035550.md)
@@ -598,6 +600,4 @@
 1-26 [冬季征服世界第2高峰  尼泊尔登山队写历史 – 法国国际广播电台 - RFI](/articles/rfi/1035846.md)
 
 1-26 [哥伦比亚国防部长染疫因并发症过世 享寿69岁 – 法国国际广播电台 - RFI](/articles/rfi/1035847.md)
-
-1-26 [全球疫情确诊逾9963万 超过214万人病故 – 法国国际广播电台 - RFI](/articles/rfi/1035848.md)
 
