--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-1 [【立此存照】正牌五毛工作是怎么样的](/articles/cdt/386340.md)
+
 2-1 [奇客资讯｜ 中国社交平台要求公众账号获得相关资质](/articles/cdt/386342.md)
 
 2-1 [南方周末 |输入法会“背叛”我们吗？](/articles/cdt/386343.md)
@@ -598,6 +600,4 @@
 1-1 [有所读｜五条人和谭维维的歌词篡改：没有意义改没有异议，翻白眼改放白烟](/articles/cdt/387611.md)
 
 1-1 [【CDTV】波特王｜十二月粉红月报：寻人启事！粉红们通通出来面对！](/articles/cdt/387613.md)
-
-1-1 [【CDT敏感词周报】张展、阿里巴巴、腊肉节、李文亮](/articles/cdt/387623.md)
 
