--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-1 [拜登总统呼吁国会尽速通过“美国救援法案”](/articles/voa/1043306.md)
+
 2-1 [缅甸执政党发言人说，缅甸领导人昂山素季和其他人被拘捕](/articles/voa/1043307.md)
 
 2-1 [索马里首都一家酒店外面发生剧烈爆炸](/articles/voa/1043308.md)
@@ -598,6 +600,4 @@
 1-20 [定性中共在新疆进行种族灭绝 专家预计美国最新决定将牵动欧洲](/articles/voa/1043604.md)
 
 1-20 [美检察官要求没收为朝鲜洗钱公司资产 涉案方多为中国企业](/articles/voa/1043605.md)
-
-1-20 [美国财长候选人耶伦：中国是最重要的战略竞争对手](/articles/voa/1043606.md)
 
