--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-1 [欧盟疫苗施打进度慢 德国不排除中俄供货](/articles/dw/1044140.md)
+
 2-1 [缅甸疑似发生政变 昂山素季等高层被带走](/articles/dw/1044141.md)
 
 1-31 [不满被“拉黑” 小米状告美国防部和财政部](/articles/dw/1044142.md)
@@ -598,6 +600,4 @@
 1-16 [香港社媒移民潮：WhatsApp壓垮的最後一根稻草](/articles/dw/1044438.md)
 
 1-16 [记者手记：从特区回来以后，川粉会改变吗？](/articles/dw/1044439.md)
-
-1-16 [美国大猩猩感染新冠 世界首例？](/articles/dw/1044440.md)
 
