--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-1 [昂山素季被缅甸军方扣押](/articles/ft/1046153.md)
+
 2-1 [“逼空”大战致对冲基金梅尔文亏损53%](/articles/ft/1046154.md)
 
 2-1 [拜登展现对华鹰派一面](/articles/ft/1046155.md)
@@ -598,6 +600,4 @@
 12-25 [拜登对华政策的基调将是什么？](/articles/ft/1046451.md)
 
 12-25 [傅高义逝世与中美关系的未来](/articles/ft/1046452.md)
-
-12-24 [中国监管机构对阿里巴巴展开反垄断调查](/articles/ft/1046453.md)
 
