--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+2-1 [海航多期公司债被下调评级 交易方式由竞价改为电子平台和协议大宗交易](/articles/reuters/1041124.md)
+
+2-1 [焦点：银价接棒GameStop式散户炒作热潮 跳涨至五个月高点](/articles/reuters/1041125.md)
+
+2-1 [联合国秘书长敦促缅甸军方尊重人民的意愿](/articles/reuters/1041126.md)
+
+2-1 [《热点聚焦》PMI降至数月低点：中国宏观政策不会急转弯 温和退出是主基调](/articles/reuters/1041127.md)
+
 2-1 [调查：全球基金经理建议股票配比上调至11个月高点](/articles/reuters/1041128.md)
 
 2-1 [亚股试图反弹 散户大军将目光投向白银](/articles/reuters/1041129.md)
@@ -592,12 +600,4 @@
 1-25 [中国外交部称美国舰队驶入南海不利于和平 敦促美慎重妥善处理涉台问题](/articles/reuters/1041422.md)
 
 1-25 [美元持稳人民币收盘小升 短期缺乏方向等待信息指引](/articles/reuters/1041423.md)
-
-1-25 [英国若不改革则可能沦为“失败国家”--前首相布朗](/articles/reuters/1041424.md)
-
-1-25 [中国股市沪深300指数收涨1% 受消费类股支撑](/articles/reuters/1041425.md)
-
-1-25 [印度和中国军队在锡金边境发生“小规模对峙”--印度军方](/articles/reuters/1041426.md)
-
-1-25 [图表新闻：铜价亮丽涨势将因需求转淡而暂歇 但后市仍看俏](/articles/reuters/1041427.md)
 
