--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-1 [Aedes:中国建筑师走向国际的推手](/articles/ft/1046152.md)
+
 2-1 [昂山素季被缅甸军方扣押](/articles/ft/1046153.md)
 
 2-1 [“逼空”大战致对冲基金梅尔文亏损53%](/articles/ft/1046154.md)
@@ -598,6 +600,4 @@
 12-25 [2021年中国经济的关键判断与应对](/articles/ft/1046450.md)
 
 12-25 [拜登对华政策的基调将是什么？](/articles/ft/1046451.md)
-
-12-25 [傅高义逝世与中美关系的未来](/articles/ft/1046452.md)
 
