--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-1 [缅甸发生政变 军方称进入一年紧急状态](/articles/dw/1044138.md)
+
 2-1 [英国将申请加入CPTPP 反对党忧无法拒绝中国](/articles/dw/1044139.md)
 
 2-1 [欧盟疫苗施打进度慢 德国不排除中俄供货](/articles/dw/1044140.md)
@@ -598,6 +600,4 @@
 1-16 [蓬佩奥下台之际再推涉港制裁 港府：”卑劣无耻”](/articles/dw/1044436.md)
 
 1-16 [不甘示弱 俄罗斯也退出“开放天空条约”](/articles/dw/1044437.md)
-
-1-16 [香港社媒移民潮：WhatsApp壓垮的最後一根稻草](/articles/dw/1044438.md)
 
