--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-1 [缅甸军事政变 外商忧重回锁国年代](/articles/rfa/1046546.md)
+
 1-30 [美国务院关注郭飞雄   友人介绍张青近况](/articles/rfa/1046547.md)
 
 1-30 [匿名前官员：美应修改对华战略 明确针对习近平](/articles/rfa/1046548.md)
@@ -598,6 +600,4 @@
 12-29 [蚂蚁集团“无照驾驶”   撞上中国反垄断枪口？](/articles/rfa/1046844.md)
 
 12-29 [特朗普签法案支持台湾   中国要求停止干预内政](/articles/rfa/1046845.md)
-
-12-29 [公民记者张展被判刑四年  她究竟做了什么？](/articles/rfa/1046846.md)
 
