--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-1 [缅甸军方发动政变，昂山素季被拘留](/articles/nyt/1047228.md)
+
 2-1 [冰箱战胜电视：俄罗斯经济低迷打破普京的爱国盾牌](/articles/nyt/1047229.md)
 
 2-1 [中国可能会是拜登的噩梦](/articles/nyt/1047230.md)
@@ -598,6 +600,4 @@
 11-24 [中美构建合作–竞争关系是可能的](/articles/nyt/1047526.md)
 
 11-24 [特朗普到底为什么喜欢当总统？](/articles/nyt/1047527.md)
-
-11-24 [中国拘禁了我的维吾尔老教授，但关不住他的诗](/articles/nyt/1047528.md)
 
