--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-1 [弹劾案下周开审 前总统特朗普选定新辩护律师](/articles/voa/1043301.md)
+
 2-1 [专家：拜登给对俄政策确定新基调](/articles/voa/1043302.md)
 
 2-1 [以色列和巴勒斯坦都在关注拜登政府中东新政策出台](/articles/voa/1043303.md)
@@ -598,6 +600,4 @@
 1-20 [美国防部长提名人奥斯汀：中国是美国头号威胁](/articles/voa/1043599.md)
 
 1-20 [美国国民警卫队的角色](/articles/voa/1043600.md)
-
-1-20 [德国极右翼团体借助对抗疫封闭措施的不满扩大招募](/articles/voa/1043601.md)
 
