--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-1 [北京忧春节疫情失控 世卫小组访湖北疾控中心](/articles/dw/1044136.md)
+
+2-1 [专访：政变预告缅甸将回归军方长期统治](/articles/dw/1044137.md)
+
 2-1 [缅甸发生政变 军方称进入一年紧急状态](/articles/dw/1044138.md)
 
 2-1 [英国将申请加入CPTPP 反对党忧无法拒绝中国](/articles/dw/1044139.md)
@@ -596,8 +600,4 @@
 1-16 [默克尔：疫情之后，德国将“更强大”](/articles/dw/1044434.md)
 
 1-16 [关押三年首次会见 余文生妻：心疼他遭逢的苦难](/articles/dw/1044435.md)
-
-1-16 [蓬佩奥下台之际再推涉港制裁 港府：”卑劣无耻”](/articles/dw/1044436.md)
-
-1-16 [不甘示弱 俄罗斯也退出“开放天空条约”](/articles/dw/1044437.md)
 
