--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-1 [史料搬运工｜消失无踪的阳刚之气](/articles/cdt/386330.md)
+
+2-1 [编程随想｜每周转载：内卷的天朝，各阶层的众生相（网文17篇）](/articles/cdt/386332.md)
+
 2-1 [【立此存照】正牌五毛工作是怎么样的](/articles/cdt/386340.md)
 
 2-1 [奇客资讯｜ 中国社交平台要求公众账号获得相关资质](/articles/cdt/386342.md)
@@ -12,6 +16,8 @@
 2-1 [【网络民议】网信办：让监管长牙齿；网民：獠牙吗？](/articles/cdt/386345.md)
 
 2-1 [巴蜀独立评论 | 女子因其公司起诉河南一区政府行政违法被捕](/articles/cdt/386346.md)
+
+2-1 [【CDT周报】第二期：只允许一种声音存在 那这唯一的声音必然是谎言](/articles/cdt/386348.md)
 
 1-31 [美国之音 | 中国的抗疫绝招与人类文明的反差](/articles/cdt/386349.md)
 
@@ -594,10 +600,4 @@
 1-1 [女孩别怕｜这项制度一实施，女性地位倒退70年](/articles/cdt/387607.md)
 
 1-1 [话语生态研究｜范之：2020，最难忘的流行语](/articles/cdt/387608.md)
-
-1-1 [冰川思享号｜2020，谁不是一边哭着，一边拼命活着？| 年终人物印象](/articles/cdt/387609.md)
-
-1-1 [黄章晋｜别了，2020](/articles/cdt/387610.md)
-
-1-1 [有所读｜五条人和谭维维的歌词篡改：没有意义改没有异议，翻白眼改放白烟](/articles/cdt/387611.md)
 
