--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+2-1 [焦点：海航集团虽陷危机 高品牌价值的海南航空可望吸引新投资人](/articles/reuters/1041109.md)
+
+2-1 [中国商务部称2020年底前对欧盟实施的贸易救济措施 仍适用于欧盟和英国](/articles/reuters/1041110.md)
+
+2-1 [乌克兰总统宣布制裁北京天骄等中国企业 中国外交部称反对单边制裁](/articles/reuters/1041111.md)
+
 2-1 [人民币收盘小跌短期弹性料增强 资金紧张缓解掉期曲线略下移](/articles/reuters/1041112.md)
 
 2-1 [缅甸军方逮捕昂山素季 中国外交部称希望缅甸各方妥善处理分歧维护稳定](/articles/reuters/1041113.md)
@@ -594,10 +600,4 @@
 1-26 [金价因美元走高而缩减涨幅 但刺激预期仍支撑金市](/articles/reuters/1041407.md)
 
 1-25 [中国央行官员称打着大数据和金融科技旗号擅自从事个人征信业务行为均属违法](/articles/reuters/1041408.md)
-
-1-25 [中国国务院通知要求新冠疫情中风险地区群众原则上就地过年 把人员流动降到最低](/articles/reuters/1041409.md)
-
-1-25 [疫情后通胀可能暂时飙升 美联储对此并不担心](/articles/reuters/1041410.md)
-
-1-25 [中国央行首次批准银行发行转股型永续债 多渠道补充中小银行资本](/articles/reuters/1041411.md)
 
