--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-1 [“逼空大战”：为何难以起诉散户？](/articles/ft/1046149.md)
+
 2-1 [一周世界舆论聚焦：中日《海警法》争议](/articles/ft/1046150.md)
 
 2-1 [我们还有多久走出疫情的至暗时刻？](/articles/ft/1046151.md)
@@ -598,6 +600,4 @@
 12-25 [2025年的世界会是什么样？](/articles/ft/1046447.md)
 
 12-25 [减免学生债务有助美国经济复苏](/articles/ft/1046448.md)
-
-12-25 [从未公开过的NASA宇航员训练照片](/articles/ft/1046449.md)
 
