--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-1 [中国教育部公告培养“阳刚之气”挨批助长性别歧视](/articles/rfa/1046543.md)
+
+2-1 [缅甸军事政变昂山素季被捕    外商或撤资 一带一路现变数](/articles/rfa/1046544.md)
+
+2-1 [赵少康宣布重返国民党 有意问鼎党主席、总统大位](/articles/rfa/1046545.md)
+
 2-1 [缅甸军事政变 外商忧重回锁国年代](/articles/rfa/1046546.md)
 
 1-30 [美国务院关注郭飞雄   友人介绍张青近况](/articles/rfa/1046547.md)
@@ -594,10 +600,4 @@
 12-29 [疫情下台湾人才回流 揽才留才自由民主成强项](/articles/rfa/1046841.md)
 
 12-29 [亲北京组织编撰《香港志》   香港历史以 "国家" 为主体](/articles/rfa/1046842.md)
-
-12-29 [北京新增7例新冠肺炎	紧急取消元旦春节大型活动](/articles/rfa/1046843.md)
-
-12-29 [蚂蚁集团“无照驾驶”   撞上中国反垄断枪口？](/articles/rfa/1046844.md)
-
-12-29 [特朗普签法案支持台湾   中国要求停止干预内政](/articles/rfa/1046845.md)
 
