--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-1 [病毒可怕，个人隐私被泄露更可怕](/articles/voa/1043299.md)
+
 2-1 [缅甸军方夺取政权 拘捕昂山素季 白宫发声明促放人](/articles/voa/1043300.md)
 
 2-1 [弹劾案下周开审 前总统特朗普选定新辩护律师](/articles/voa/1043301.md)
@@ -598,6 +600,4 @@
 1-20 [美国新国务卿人选表态 预示新政府可能延续对华强硬路线](/articles/voa/1043597.md)
 
 1-20 [美国务卿提名人布林肯：“特朗普对北京强硬是正确的“](/articles/voa/1043598.md)
-
-1-20 [美国防部长提名人奥斯汀：中国是美国头号威胁](/articles/voa/1043599.md)
 
