--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-1 [缅甸军事政变： “真正的噩梦”](/articles/dw/1044131.md)
+
+2-1 [香港终院押后裁决黎智英保释上诉案](/articles/dw/1044132.md)
+
 2-1 [台湾首次通报美侦察机进入其防空识别区](/articles/dw/1044133.md)
 
 2-1 [为一线医护筹捐数千万  百岁老兵染疫入院](/articles/dw/1044134.md)
@@ -596,8 +600,4 @@
 1-16 [中国当局强调病毒“境外输入” 5天建成新医院](/articles/dw/1044429.md)
 
 1-16 [中歐投資協議：法國學者評以倒退求前進](/articles/dw/1044430.md)
-
-1-16 [美国检方：冲击国会者曾想谋杀议员](/articles/dw/1044431.md)
-
-1-16 [瑞典智库修正对中国2019年实际军费的估计](/articles/dw/1044432.md)
 
