--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-1 [在台港人办年宵 现大量政治标语](/articles/dw/1044130.md)
+
 2-1 [缅甸军事政变： “真正的噩梦”](/articles/dw/1044131.md)
 
 2-1 [香港终院押后裁决黎智英保释上诉案](/articles/dw/1044132.md)
@@ -598,6 +600,4 @@
 1-16 [“令人无法接受“？美德合作疫苗暂减对欧洲交付量](/articles/dw/1044428.md)
 
 1-16 [中国当局强调病毒“境外输入” 5天建成新医院](/articles/dw/1044429.md)
-
-1-16 [中歐投資協議：法國學者評以倒退求前進](/articles/dw/1044430.md)
 
