--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-1 [国际社会谴责缅甸军人政变 呼吁立即放人](/articles/rfi/1035500.md)
+
+2-1 [拜耳联手CureVac药厂 2022年生产疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1035501.md)
+
+2-1 [疫情带动宅经济 任天堂二度上修年度财测 – 法国国际广播电台 - RFI](/articles/rfi/1035502.md)
+
+2-1 [辉瑞与BioNTech再增7500万剂疫苗给欧盟 – 法国国际广播电台 - RFI](/articles/rfi/1035503.md)
+
 2-1 [缅甸军队总司令敏昂莱发动政变 暴露政治野心 – 法国国际广播电台 - RFI](/articles/rfi/1035504.md)
 
 2-1 [全球疫情逾1亿287万例确诊 超过222万人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1035505.md)
@@ -592,12 +600,4 @@
 1-27 [多传中药能治新冠病毒 中国中药酝酿私有化与沪深上市](/articles/rfi/1035798.md)
 
 1-27 [共和党在参院展现团结抵制弹劾案 特朗普安了？](/articles/rfi/1035799.md)
-
-1-27 [拜登上任第一挫 移民遣返冻结令遭法官叫停](/articles/rfi/1035800.md)
-
-1-27 [印度威胁永久禁用中国软件 字节跳动缩减在印人员](/articles/rfi/1035801.md)
-
-1-27 [新冠病毒全球一亿人确诊 黑夜仍漫长](/articles/rfi/1035802.md)
-
-1-27 [港府玩封区不亦乐乎佐敦刚结束又轮到油麻地](/articles/rfi/1035803.md)
 
