--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-2 [俄罗斯当局恐将纳瓦尔尼判刑入狱](/articles/voa/1043296.md)
+
 2-1 [香港终审法院裁决黎智英继续还押 择日裁决是否保释](/articles/voa/1043297.md)
 
 2-1 [世卫组织专家组到访湖北和武汉疾控中心 新冠溯源调查仍扑朔迷离](/articles/voa/1043298.md)
@@ -598,6 +600,4 @@
 1-20 [世界聚焦华盛顿 拜登、哈里斯即将入主白宫](/articles/voa/1043594.md)
 
 1-20 [弯道超车： 中国建构自我资本价值链挑战美国能成功吗？](/articles/voa/1043595.md)
-
-1-20 [马云失踪近三月后发视频向教师致敬“等疫情过去了我们再见面”](/articles/voa/1043596.md)
 
