--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-2 [黎智英就国安法勾结罪保释上诉案 香港终审法院押后裁决需继续还柙](/articles/voa/1043292.md)
+
+2-2 [拜登首席医学顾问弗契将与钟南山讨论疫情防控](/articles/voa/1043293.md)
+
 2-2 [台湾国防部：中国和美国军机进入台西南空域](/articles/voa/1043294.md)
 
 2-2 [缅甸军方政变夺权 美中反应大相径庭](/articles/voa/1043295.md)
@@ -596,8 +600,4 @@
 1-21 [拜登入主白宫面对诸多重大挑战，还有一个小麻烦](/articles/voa/1043590.md)
 
 1-21 [特朗普总统离开华盛顿](/articles/voa/1043591.md)
-
-1-20 [特朗普总统离任前再赦免73人 另为70人减刑](/articles/voa/1043592.md)
-
-1-20 [北京抗疫再现去年场景：公共场所封锁，人员不得离京](/articles/voa/1043593.md)
 
