--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-2 [一种新武器？中国船只在台湾宣称拥有主权的水域挖砂](/articles/voa/1043290.md)
+
+2-2 [澳大利亚加强帮助东南亚打击犯罪 抗衡中国影响力](/articles/voa/1043291.md)
+
 2-2 [黎智英就国安法勾结罪保释上诉案 香港终审法院押后裁决需继续还柙](/articles/voa/1043292.md)
 
 2-2 [拜登首席医学顾问弗契将与钟南山讨论疫情防控](/articles/voa/1043293.md)
@@ -596,8 +600,4 @@
 1-21 [哈里斯宣誓就任美国副总统 印度村庄为她欢呼](/articles/voa/1043588.md)
 
 1-21 [新冠疫情导致泰国、马来西亚和菲律宾的人权状况恶化](/articles/voa/1043589.md)
-
-1-21 [拜登入主白宫面对诸多重大挑战，还有一个小麻烦](/articles/voa/1043590.md)
-
-1-21 [特朗普总统离开华盛顿](/articles/voa/1043591.md)
 
