--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-2 [欧洲疫苗荒 德国不排斥中国疫苗 匈牙利批准购买](/articles/rfa/1046539.md)
+
 2-2 [引起争议的《温州共识》：部分温州家庭教会人员疑向当局妥协](/articles/rfa/1046540.md)
 
 2-1 [台湾否认透过美国取得首批疫苗  自信有“等的本钱”](/articles/rfa/1046541.md)
@@ -598,6 +600,4 @@
 12-30 [欧盟呼吁中国：释放张展及12名港人](/articles/rfa/1046837.md)
 
 12-30 [港人“偷渡”案十人认罪     预计周三宣判](/articles/rfa/1046838.md)
-
-12-30 [内蒙民族学校将名存实亡？ 小学三年级起全汉语教学](/articles/rfa/1046839.md)
 
