--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-2 [国会预测：美国经济今年中期将恢复正常](/articles/voa/1043286.md)
+
+2-2 [民主党掌控白宫国会，权力制衡还可能吗？](/articles/voa/1043287.md)
+
+2-2 [缅甸军方政变 拜登声明：对民主和法治的直接攻击](/articles/voa/1043288.md)
+
 2-2 [时事大家谈: 官媒揭“厕所革命”弊端，习时代“折腾”知多少？](/articles/voa/1043289.md)
 
 2-2 [一种新武器？中国船只在台湾宣称拥有主权的水域挖砂](/articles/voa/1043290.md)
@@ -594,10 +600,4 @@
 1-21 [拜登宣誓就任 欧盟英德中国伊朗表示期待新变化](/articles/voa/1043584.md)
 
 1-21 [白宫：特朗普给拜登留下字条 内容未知](/articles/voa/1043585.md)
-
-1-21 [香港1/6大搜捕后5大社会指标处历史低位 专家指从劣政到暴政](/articles/voa/1043586.md)
-
-1-21 [中国海警法为邻国敲响警钟](/articles/voa/1043587.md)
-
-1-21 [哈里斯宣誓就任美国副总统 印度村庄为她欢呼](/articles/voa/1043588.md)
 
