--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-2 [郭飞雄妻呼吁帮助   美国务院在交涉中](/articles/rfa/1046536.md)
+
+2-2 [揭密拜登的中国政策智囊 (上) –  鹰派老将与新生代“中国通”](/articles/rfa/1046537.md)
+
 2-2 [持外国护照香港人需二选一     三十万加拿大居港公民权益受损](/articles/rfa/1046538.md)
 
 2-2 [欧洲疫苗荒 德国不排斥中国疫苗 匈牙利批准购买](/articles/rfa/1046539.md)
@@ -596,8 +600,4 @@
 12-30 [美收紧投资中国军方企业限制 指数基金及子公司包含在内](/articles/rfa/1046834.md)
 
 12-30 [台湾为美国中文领航项目提供远距教学 成效如何？](/articles/rfa/1046835.md)
-
-12-30 [海外中国民运组织呼吁加拿大政府关注张展、欧彪峰等人权案件](/articles/rfa/1046836.md)
-
-12-30 [欧盟呼吁中国：释放张展及12名港人](/articles/rfa/1046837.md)
 
