--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-2 [缅甸政变 是美国踩空 中国得势？](/articles/rfa/1046535.md)
+
 2-2 [郭飞雄妻呼吁帮助   美国务院在交涉中](/articles/rfa/1046536.md)
 
 2-2 [揭密拜登的中国政策智囊 (上) –  鹰派老将与新生代“中国通”](/articles/rfa/1046537.md)
@@ -598,6 +600,4 @@
 12-30 [被谁背叛的钢琴家? 钢琴诗人傅聪病逝他乡](/articles/rfa/1046833.md)
 
 12-30 [美收紧投资中国军方企业限制 指数基金及子公司包含在内](/articles/rfa/1046834.md)
-
-12-30 [台湾为美国中文领航项目提供远距教学 成效如何？](/articles/rfa/1046835.md)
 
