--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-2 [买盘逢低承接 欧股反弹 – 法国国际广播电台 - RFI](/articles/rfi/1035484.md)
+
 2-2 [布林肯：中国对美国构成最大挑战，愿为受镇压港人提供避风港](/articles/rfi/1035485.md)
 
 2-2 [英国正式申请加入CPTPP 日本表示欢迎](/articles/rfi/1035486.md)
@@ -598,6 +600,4 @@
 1-27 [藏人僧侣死亡背后的暴力镇压 - 法国报纸摘要](/articles/rfi/1035782.md)
 
 1-27 [自杀、全家感染：日本新冠在家疗养悲剧频出 - 东京专栏](/articles/rfi/1035783.md)
-
-1-27 [Shorts力压抖音？日观量35亿次！](/articles/rfi/1035784.md)
 
