--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-2 [孙韵：军政矛盾引爆缅甸政变 中国经济蓝图或因此受损](/articles/voa/1043285.md)
+
 2-2 [国会预测：美国经济今年中期将恢复正常](/articles/voa/1043286.md)
 
 2-2 [民主党掌控白宫国会，权力制衡还可能吗？](/articles/voa/1043287.md)
@@ -598,6 +600,4 @@
 1-21 [拜登将用行政命令扭转诸多特朗普的政策](/articles/voa/1043583.md)
 
 1-21 [拜登宣誓就任 欧盟英德中国伊朗表示期待新变化](/articles/voa/1043584.md)
-
-1-21 [白宫：特朗普给拜登留下字条 内容未知](/articles/voa/1043585.md)
 
