--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-2 [华语江湖 | 李大钊：不要借口危险思想来禁止言论自由](/articles/cdt/386321.md)
+
 2-1 [新周刊｜寂寞身后事：川师大坠亡教授庹继光的高光与困顿](/articles/cdt/386324.md)
 
 2-1 [豆瓣读书｜挑食小猪猪：什么是反苏维埃案件？](/articles/cdt/386327.md)
@@ -598,6 +600,4 @@
 1-2 [回声 | 2020厌女事件大赏](/articles/cdt/387594.md)
 
 1-2 [弧度工作室 | 从“离婚冷静期”到各种离婚难，婚姻从来不是个人事务？](/articles/cdt/387596.md)
-
-1-2 [德国之声 | 长平观察：来自张展的新年礼物](/articles/cdt/387598.md)
 
