--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-2 [中国首批疫苗援外之际  惊现假疫苗](/articles/rfa/1046532.md)
+
 2-2 [耿潇男夫妇被起诉“非法经营罪”     春节前开庭](/articles/rfa/1046533.md)
 
 2-2 [王鹏：筹划病毒展览、披露暴力计生而被强拆](/articles/rfa/1046534.md)
@@ -598,6 +600,4 @@
 12-30 [香港政府阻挠美领馆卖房产套现    投资者或对香港资产失去信心](/articles/rfa/1046830.md)
 
 12-30 [张展当庭质疑法官提问荒谬    “你的良心会告诉你这是错误的吗？”](/articles/rfa/1046831.md)
-
-12-30 [疫情一周年官方披露感染率4.43%  比早前数字多10倍](/articles/rfa/1046832.md)
 
