--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-2 [自由亚洲 | 耿潇男夫妇被起诉“非法经营罪” 春节前开庭](/articles/cdt/386319.md)
+
+2-2 [同语 | 权益2020（上）：牵动你我的LGBT大事件](/articles/cdt/386320.md)
+
 2-2 [华语江湖 | 李大钊：不要借口危险思想来禁止言论自由](/articles/cdt/386321.md)
 
 2-1 [新周刊｜寂寞身后事：川师大坠亡教授庹继光的高光与困顿](/articles/cdt/386324.md)
@@ -596,8 +600,4 @@
 1-3 [【网络民议】我向央视申请信息公开，要求调查回应朱军性骚扰案](/articles/cdt/387589.md)
 
 1-2 [南方周末 | 刑法教授罗翔： 我在朴素的正义与偏狭的情绪中， 寻找一种分寸](/articles/cdt/387591.md)
-
-1-2 [回声 | 2020厌女事件大赏](/articles/cdt/387594.md)
-
-1-2 [弧度工作室 | 从“离婚冷静期”到各种离婚难，婚姻从来不是个人事务？](/articles/cdt/387596.md)
 
