--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+2-2 [油价收高逾2% 受助于库欣库存减少以及需求增加](/articles/reuters/1041107.md)
+
+2-2 [散户大举买入推动银价暴涨至八年最高 金价跳升1%](/articles/reuters/1041108.md)
+
 2-1 [焦点：海航集团虽陷危机 高品牌价值的海南航空可望吸引新投资人](/articles/reuters/1041109.md)
 
 2-1 [中国商务部称2020年底前对欧盟实施的贸易救济措施 仍适用于欧盟和英国](/articles/reuters/1041110.md)
@@ -596,8 +600,4 @@
 1-26 [刺激计划不安情绪令美股股指回吐涨幅 但纳指和标普仍创纪录收盘高位](/articles/reuters/1041405.md)
 
 1-26 [油价升1% 因美国刺激希望和供应忧虑](/articles/reuters/1041406.md)
-
-1-26 [金价因美元走高而缩减涨幅 但刺激预期仍支撑金市](/articles/reuters/1041407.md)
-
-1-25 [中国央行官员称打着大数据和金融科技旗号擅自从事个人征信业务行为均属违法](/articles/reuters/1041408.md)
 
