--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-2 [正在改变的秩序：GME逼空折射美国社会风险](/articles/ft/1046147.md)
+
 2-1 [拜登的复苏计划可能遭遇墨菲定律](/articles/ft/1046148.md)
 
 2-1 [“逼空大战”：为何难以起诉散户？](/articles/ft/1046149.md)
@@ -598,6 +600,4 @@
 12-25 [FT社评：退欧之后，英国应明确国家发展愿景](/articles/ft/1046445.md)
 
 12-25 [未来世界：塑造后疫情时代的五大力量](/articles/ft/1046446.md)
-
-12-25 [2025年的世界会是什么样？](/articles/ft/1046447.md)
 
