--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-2 [缅甸突发政变考验拜登支持民主宣言及政策可靠性 - 要闻分析](/articles/rfi/1035476.md)
+
 2-2 [拜登呼吁国际社会团结一致，迫使缅甸军方立即放弃权力](/articles/rfi/1035477.md)
 
 2-2 [世卫官员呼吁让国际专家在武汉&quot;自由访问&quot;](/articles/rfi/1035478.md)
@@ -598,6 +600,4 @@
 1-27 [习近平今听林郑与贺一诚述职 聚焦香港](/articles/rfi/1035774.md)
 
 1-27 [菲律宾取消中交建100亿美元机场改造案中标资格](/articles/rfi/1035775.md)
-
-1-27 [拜登提名的联合国大使今天参议院听证过堂 将称美国的缺席会让中国在联合国势力日增](/articles/rfi/1035776.md)
 
