--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-2 [新冠疫苗渐显功效 少数族裔接种率仍待提高](/articles/voa/1043278.md)
+
+2-2 [军队接管国家后缅甸人士接受美国之音采访谈当前局势](/articles/voa/1043279.md)
+
 2-2 [专家视点: 华盛顿学者分析缅甸军方政变对美中两国影响](/articles/voa/1043280.md)
 
 2-2 [白宫要义: 拜登警告缅甸或恢复制裁，会共和党参议员共商新冠纾困](/articles/voa/1043281.md)
@@ -596,8 +600,4 @@
 1-21 [专家：拜登政府对华强硬与否，取决于习近平](/articles/voa/1043576.md)
 
 1-21 [美国第46任总统乔·拜登的足迹](/articles/voa/1043577.md)
-
-1-21 [华盛顿举行总统就职典礼 城市氛围平静](/articles/voa/1043578.md)
-
-1-21 [巴基斯坦试射可携带核弹头的弹道导弹](/articles/voa/1043579.md)
 
