--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-2 [法律园地 | 因转发非官方解读的历史人物及历史事件文章，《法史天地》公众号被关闭](/articles/cdt/386315.md)
+
 2-2 [自由亚洲 | 耿潇男夫妇被起诉“非法经营罪” 春节前开庭](/articles/cdt/386319.md)
 
 2-2 [同语 | 权益2020（上）：牵动你我的LGBT大事件](/articles/cdt/386320.md)
@@ -598,6 +600,4 @@
 1-2 [许章润：七劄 致候门下诸生](/articles/cdt/387584.md)
 
 1-3 [【网络民议】我向央视申请信息公开，要求调查回应朱军性骚扰案](/articles/cdt/387589.md)
-
-1-2 [南方周末 | 刑法教授罗翔： 我在朴素的正义与偏狭的情绪中， 寻找一种分寸](/articles/cdt/387591.md)
 
