--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-2 [联合国商讨缅甸政变对策 专家优中国操弄](/articles/dw/1044124.md)
+
 2-1 [德国疫苗接种第二季度有望大幅推进](/articles/dw/1044125.md)
 
 2-1 [葡萄牙疫情告急 德国施以援手](/articles/dw/1044126.md)
@@ -598,6 +600,4 @@
 1-17 [医学专家反对延长两次疫苗接种间隔期](/articles/dw/1044422.md)
 
 1-17 [客座评论：中美系统性竞争开启 谁能抢占经济先机？](/articles/dw/1044423.md)
-
-1-17 [香港小茶馆：新冠疫情中的日常](/articles/dw/1044424.md)
 
