--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,18 @@
 路透
 ------
 
+2-2 [独家：阿斯利康/牛津疫苗试验给错剂量 却将错就错未通知志愿者](/articles/reuters/1041093.md)
+
+2-2 [独家：Robinhood考虑更多借款以满足Reddit激发的交易狂潮--消息](/articles/reuters/1041094.md)
+
+2-2 [中国华夏幸福流动性紧张致52.55亿元债务逾期，但承诺“不逃废债”](/articles/reuters/1041095.md)
+
+2-2 [焦点：CBO上调今年美国经济增长预估至4.6% 或令国会刺激措施谈判复杂化](/articles/reuters/1041096.md)
+
+2-2 [焦点：日美最高财政官员重申将采取大胆措施助经济走出危机--日财务大臣](/articles/reuters/1041097.md)
+
+2-2 [分析：“就地过年”将打破中国传统春节“高消费+低生产”特征](/articles/reuters/1041098.md)
+
 2-2 [焦点：海航集团破产重整旗下股票大跌 债券被视为“植物人”回收预期低](/articles/reuters/1041099.md)
 
 2-2 [调查：中国楼市调控从紧、严守资金闸门 今年房价涨幅料收至3.3%](/articles/reuters/1041100.md)
@@ -588,16 +600,4 @@
 1-26 [中国央行行长易纲称致力避免出现“政策悬崖”](/articles/reuters/1041391.md)
 
 1-26 [路透测算的人民币中间价料贬至6.4826元附近 上日美指略升](/articles/reuters/1041392.md)
-
-1-26 [拜登称上任百日完成1亿剂新冠疫苗接种的目标可能提高至1.5亿剂](/articles/reuters/1041393.md)
-
-1-26 [拜登延长对英欧与巴西的禁止入境措施 禁令名单新增南非](/articles/reuters/1041394.md)
-
-1-26 [全球经济料去年萎缩4.3%后今年增长4.7% 发展中国家表现较好--联合国报告](/articles/reuters/1041395.md)
-
-1-26 [2020年全球工时大幅减少后 劳动力市场绽露脆弱复苏迹象--ILO报告](/articles/reuters/1041396.md)
-
-1-26 [焦点：美国正与中国激烈竞争 拜登希望“耐心”处理与中国的关系--白宫](/articles/reuters/1041397.md)
-
-1-26 [美国国务院称拜登将确保美国的科技不会支持中国的“邪恶行动”](/articles/reuters/1041398.md)
 
