--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-2 [展望2021：货币政策应避免急转弯](/articles/ft/1046144.md)
+
 2-2 [海航集团子公司披露资金滥用后股价大跌](/articles/ft/1046145.md)
 
 2-2 [Reddit“股民起义”会撼动华尔街吗？](/articles/ft/1046146.md)
@@ -598,6 +600,4 @@
 12-25 [美国投票机公司要求右翼媒体撤回不实指控](/articles/ft/1046442.md)
 
 12-25 [FT社评：在2020年欢庆科学的胜利](/articles/ft/1046443.md)
-
-12-25 [互联网巨头Netflix会被传统企业打落凡尘吗](/articles/ft/1046444.md)
 
