--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-2 [联合国商讨缅甸政变对策 专家忧中国操弄](/articles/dw/1044122.md)
+
 2-2 [力挺调查团 世卫批放话者不负责任](/articles/dw/1044123.md)
 
 2-2 [联合国商讨缅甸政变对策 专家优中国操弄](/articles/dw/1044124.md)
@@ -598,6 +600,4 @@
 1-17 [港人移民、 巨资流失 北京会怎样出手？](/articles/dw/1044420.md)
 
 1-17 [报告：减少对华关税有利于美国经济](/articles/dw/1044421.md)
-
-1-17 [医学专家反对延长两次疫苗接种间隔期](/articles/dw/1044422.md)
 
