--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+2-2 [缅甸银行周二重新开放 此前在军方政变后暂时关闭--路透目击](/articles/reuters/1041082.md)
+
+2-2 [图表新闻：抓紧估值飙升及低利率良机 全球1月企业股债筹资火热](/articles/reuters/1041083.md)
+
+2-2 [GameStop股价周一骤跌 空头年内按市值计价的损失减少--分析公司S3](/articles/reuters/1041084.md)
+
 2-2 [Reddit散户担心改炒白银将降低GameStop关注热度](/articles/reuters/1041085.md)
 
 2-2 [中国对美政策保持稳定性和连续性 愿与美共同推动中美关系向前--杨洁篪](/articles/reuters/1041086.md)
@@ -594,10 +600,4 @@
 1-26 [《焦点》“这不正常”：华尔街越来越警惕股市泡沫](/articles/reuters/1041380.md)
 
 1-26 [美国最高法院终止对特朗普违反宪法反腐败规定的诉讼](/articles/reuters/1041381.md)
-
-1-26 [北京住建委：严查资金违规进入楼市 是今年整顿房地产市场的重中之重](/articles/reuters/1041382.md)
-
-1-26 [快手今日开始香港招股集资高至420亿港元 券商料孖展认购反应热烈](/articles/reuters/1041383.md)
-
-1-26 [中国货币政策需适度转向规避经济金融风险 应永久取消GDP目标--货币政策委员](/articles/reuters/1041384.md)
 
