--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-2 [【图说天朝】禁止在财政局机关大楼门口烧香点烛等祈福活动](/articles/cdt/386312.md)
+
 2-2 [【CDT连载】巴奴的救赎（后记•心痛欲裂）](/articles/cdt/386314.md)
 
 2-2 [法律园地 | 因转发非官方解读的历史人物及历史事件文章，《法史天地》公众号被关闭](/articles/cdt/386315.md)
@@ -598,6 +600,4 @@
 1-2 [冰川思享号 | 关于东莞图书馆留言农民工，你可能只看到开头，却没猜对结尾](/articles/cdt/387582.md)
 
 1-2 [记录者刘杰 | 王飞律师：年初有李文亮、年末有周泽，他们以一己之力向社会发出警示](/articles/cdt/387583.md)
-
-1-2 [许章润：七劄 致候门下诸生](/articles/cdt/387584.md)
 
