--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-2 [拚太空旅游 维珍银河本月再推试飞 – 法国国际广播电台 - RFI](/articles/rfi/1035473.md)
+
+2-2 [伊雯瑞秋伍德指控性虐 玛丽莲曼森被唱片公司解约 – 法国国际广播电台 - RFI](/articles/rfi/1035474.md)
+
+2-2 [伊雯瑞秋伍德不再沉默 指控玛丽莲曼森性虐 – 法国国际广播电台 - RFI](/articles/rfi/1035475.md)
+
 2-2 [缅甸突发政变考验拜登支持民主宣言及政策可靠性 - 要闻分析](/articles/rfi/1035476.md)
 
 2-2 [拜登呼吁国际社会团结一致，迫使缅甸军方立即放弃权力](/articles/rfi/1035477.md)
@@ -594,10 +600,4 @@
 1-27 [自家疫苗难产  法国赛诺菲药厂替其他品牌代工 – 法国国际广播电台 - RFI](/articles/rfi/1035771.md)
 
 1-27 [全球新冠确例破亿 欧盟将限制疫苗出口 多国再加强边境管制 - 要闻解说](/articles/rfi/1035772.md)
-
-1-27 [欧贝维利耶维尔蒂工人花园：承载历史的城市田园 - 文化遗产](/articles/rfi/1035773.md)
-
-1-27 [习近平今听林郑与贺一诚述职 聚焦香港](/articles/rfi/1035774.md)
-
-1-27 [菲律宾取消中交建100亿美元机场改造案中标资格](/articles/rfi/1035775.md)
 
