--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+2-2 [用机器学习模型深挖美国国务卿的“朋友圈”：他将主导何种对华政策？](/articles/ft/1046139.md)
+
+2-2 [大封锁下必须关注青少年的心理健康](/articles/ft/1046140.md)
+
+2-2 [科技创新能去社会意识化吗？](/articles/ft/1046141.md)
+
 2-2 [游戏驿站“逼空”的启示](/articles/ft/1046142.md)
 
 2-2 [Twitter在受到莫迪政府施压后封禁印度活动人士账号](/articles/ft/1046143.md)
@@ -594,10 +600,4 @@
 12-28 [勿对特朗普“以人废言”](/articles/ft/1046437.md)
 
 12-28 [中国美院鼓励学生“重塑传统”](/articles/ft/1046438.md)
-
-12-28 [陈楸帆：科幻作品要建立起一种对未来的乐观想象](/articles/ft/1046439.md)
-
-12-28 [一周世界舆论聚焦：如何处理暂缓签署的中欧双边投资协定？](/articles/ft/1046440.md)
-
-12-25 [达成脱欧协议只是一场序幕的结束](/articles/ft/1046441.md)
 
