--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -13,6 +13,8 @@
 
 2-2 [华语江湖 | 李大钊：不要借口危险思想来禁止言论自由](/articles/cdt/386321.md)
 
+2-2 [【CDT网语】2021年1月网语集锦：这个国家没有新闻只有旧事，不停换名字罢了](/articles/cdt/386323.md)
+
 2-1 [新周刊｜寂寞身后事：川师大坠亡教授庹继光的高光与困顿](/articles/cdt/386324.md)
 
 2-1 [豆瓣读书｜挑食小猪猪：什么是反苏维埃案件？](/articles/cdt/386327.md)
@@ -598,6 +600,4 @@
 1-3 [【CDT连载】巴奴的救赎（19）](/articles/cdt/387580.md)
 
 1-2 [冰川思享号 | 关于东莞图书馆留言农民工，你可能只看到开头，却没猜对结尾](/articles/cdt/387582.md)
-
-1-2 [记录者刘杰 | 王飞律师：年初有李文亮、年末有周泽，他们以一己之力向社会发出警示](/articles/cdt/387583.md)
 
