--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-2 [驻中使馆订「武汉蝙蝠」T恤?  加拿大：误会一场](/articles/dw/1044119.md)
+
+2-2 [《香港志》惹议 学者批歪曲历史](/articles/dw/1044120.md)
+
 2-2 [杨洁篪促中美合作 警告某些议题「碰不得」](/articles/dw/1044121.md)
 
 2-2 [联合国商讨缅甸政变对策 专家忧中国操弄](/articles/dw/1044122.md)
@@ -596,8 +600,4 @@
 1-17 [气候变迁加剧 澳洲刮起“蝙蝠龙卷风”](/articles/dw/1044417.md)
 
 1-17 [疫情宅在家，不如做医美？](/articles/dw/1044418.md)
-
-1-17 [墙外文摘：美国正推行“两个中国”政策？](/articles/dw/1044419.md)
-
-1-17 [港人移民、 巨资流失 北京会怎样出手？](/articles/dw/1044420.md)
 
