--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-2 [【异闻观止】“学习强国”接入物联网进入威马车载系统](/articles/cdt/386307.md)
+
 2-2 [【图说天朝】禁止在财政局机关大楼门口烧香点烛等祈福活动](/articles/cdt/386312.md)
 
 2-2 [【CDT连载】巴奴的救赎（后记•心痛欲裂）](/articles/cdt/386314.md)
@@ -598,6 +600,4 @@
 1-2 [中国新闻周刊 | 郭敬明于正年终道歉：是良心发现？还是利益考量？](/articles/cdt/387579.md)
 
 1-3 [【CDT连载】巴奴的救赎（19）](/articles/cdt/387580.md)
-
-1-2 [冰川思享号 | 关于东莞图书馆留言农民工，你可能只看到开头，却没猜对结尾](/articles/cdt/387582.md)
 
