--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-2 [日本称核能对2050年“净零排放”至关重要](/articles/ft/1046138.md)
+
 2-2 [用机器学习模型深挖美国国务卿的“朋友圈”：他将主导何种对华政策？](/articles/ft/1046139.md)
 
 2-2 [大封锁下必须关注青少年的心理健康](/articles/ft/1046140.md)
@@ -598,6 +600,4 @@
 12-28 [“停下来想一想”的智慧](/articles/ft/1046436.md)
 
 12-28 [勿对特朗普“以人废言”](/articles/ft/1046437.md)
-
-12-28 [中国美院鼓励学生“重塑传统”](/articles/ft/1046438.md)
 
