--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+2-2 [俄罗斯异议人士纳瓦尼受审在即 警方拘留在法院外集会的民众](/articles/reuters/1041069.md)
+
+2-2 [北京、深圳发布租赁市场新规 对分散式长租公寓资金池严加监管](/articles/reuters/1041070.md)
+
 2-2 [东京奥组委主席森喜朗称无论疫情形势如何都将举办奥运会](/articles/reuters/1041071.md)
 
 2-2 [中国股市收高 受央行流动性挹注及新冠新增病例减少提振](/articles/reuters/1041072.md)
@@ -596,8 +600,4 @@
 1-26 [中国股市沪深300指数收低2%创9月以来最大跌幅 市场揣测政策趋紧](/articles/reuters/1041367.md)
 
 1-26 [特写：低温“趴窝”续航能力骤降的新能源汽车 想说“爱你”并不容易](/articles/reuters/1041368.md)
-
-1-26 [瑞银集团第四季获利跳增137% 因客户活动活跃](/articles/reuters/1041369.md)
-
-1-26 [中美之间整体投资规模比官方数据所反映的大得多--研究](/articles/reuters/1041370.md)
 
