--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-2 [美国反情报收集中心报告：中国大量收集美国个人医疗数据威胁国家安全](/articles/voa/1043268.md)
+
 2-2 [中国高官演讲吁美中重回合作互赢 美学者：老生常谈无新意](/articles/voa/1043269.md)
 
 2-2 [《噬佛》：中共持续压迫藏人70余年](/articles/voa/1043270.md)
@@ -598,6 +600,4 @@
 1-21 [中国经济一枝独秀却内虚乏力 政府纾困促消费美国经济见起色](/articles/voa/1043566.md)
 
 1-21 [三成员上任参议员 美国民主党囊括参众两院和白宫控制权](/articles/voa/1043567.md)
-
-1-21 [台学者：美国对华政策战略方向不变 战术会有所调整](/articles/voa/1043568.md)
 
