--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-2 [缅甸军方政变 民众抢购物资](/articles/dw/1044116.md)
+
+2-2 [长平观察：踏入历史，修复过往](/articles/dw/1044117.md)
+
 2-2 [世卫调查起源受瞩目 专家: 实地考察比时间长短重要](/articles/dw/1044118.md)
 
 2-2 [驻中使馆订「武汉蝙蝠」T恤?  加拿大：误会一场](/articles/dw/1044119.md)
@@ -596,8 +600,4 @@
 1-17 [美国务院：2019年秋 武汉病毒所已有人出现症状](/articles/dw/1044414.md)
 
 1-17 [七张图看一周大事](/articles/dw/1044415.md)
-
-1-17 [新冠疫情：养殖水貂难逃悲惨命运](/articles/dw/1044416.md)
-
-1-17 [气候变迁加剧 澳洲刮起“蝙蝠龙卷风”](/articles/dw/1044417.md)
 
