--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-2 [卢比奥和伊万卡，一对“绝配”](/articles/nyt/1047222.md)
+
 2-2 [昂山素季：一个堕落了的保护神](/articles/nyt/1047223.md)
 
 2-2 [六个关键问题，快速了解缅甸政变](/articles/nyt/1047224.md)
@@ -598,6 +600,4 @@
 11-25 [韩国的流感疫苗恐慌为世界提供了哪些经验](/articles/nyt/1047520.md)
 
 11-25 [教宗方济各打破沉默，称新疆维吾尔人“受迫害”](/articles/nyt/1047521.md)
-
-11-25 [任期最后时刻，特朗普考虑对中国施加更多限制](/articles/nyt/1047522.md)
 
