--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-2 [【网络民议】南方周末前首席评论员李铁告别“公知生涯” 胡锡进点赞](/articles/cdt/386302.md)
+
 2-2 [网信唐山｜国家网信办：2020年约谈网站4282家，暂停更新1994家](/articles/cdt/386303.md)
 
 2-2 [【异闻观止】“学习强国”接入物联网进入威马车载系统](/articles/cdt/386307.md)
@@ -598,6 +600,4 @@
 1-3 [江南少庄主 | 那个撞死研究生的前大连理工大学副校长，这次会全身而退吗？](/articles/cdt/387573.md)
 
 1-2 [律政观察 | 周泽律师：小事与大事](/articles/cdt/387578.md)
-
-1-2 [中国新闻周刊 | 郭敬明于正年终道歉：是良心发现？还是利益考量？](/articles/cdt/387579.md)
 
