--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-2 [缅甸军人掌权中国得益最大  学者指缅甸民主化只会更亲西方](/articles/rfa/1046530.md)
+
 2-2 [自媒体发言须领《许可证》  官方全面审批时政评论内容](/articles/rfa/1046531.md)
 
 2-2 [中国首批疫苗援外之际  惊现假疫苗](/articles/rfa/1046532.md)
@@ -598,6 +600,4 @@
 12-30 [台学者：北京为修复美中关系 暂放松威吓台湾](/articles/rfa/1046828.md)
 
 12-30 [十二港人案深圳宣判 十被告判囚7个月至3年](/articles/rfa/1046829.md)
-
-12-30 [香港政府阻挠美领馆卖房产套现    投资者或对香港资产失去信心](/articles/rfa/1046830.md)
 
