--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-2 [缅甸全国民主联盟敦促军方释放昂山素季等官员](/articles/voa/1043266.md)
+
 2-2 [郭飞雄事件被指凸显人权法治倒退 家人盼美国援救](/articles/voa/1043267.md)
 
 2-2 [美国反情报收集中心报告：中国大量收集美国个人医疗数据威胁国家安全](/articles/voa/1043268.md)
@@ -598,6 +600,4 @@
 1-21 [中国新病例创两月新高 防疫措施加码 返乡人员七天一检](/articles/voa/1043564.md)
 
 1-21 [放过马云？观察人士：马云恐已臣服并助中共搞数码威权主义](/articles/voa/1043565.md)
-
-1-21 [中国经济一枝独秀却内虚乏力 政府纾困促消费美国经济见起色](/articles/voa/1043566.md)
 
