--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-2 [首次平民太空旅游  亿万富翁馈赠三席空位](/articles/dw/1044102.md)
+
+2-2 [昂山素季与缅甸的民主运动](/articles/dw/1044103.md)
+
+2-2 [德语媒体：西方应该害怕中国崛起吗?](/articles/dw/1044104.md)
+
 2-2 [缅甸政变后：中国看戏 西方焦急](/articles/dw/1044105.md)
 
 2-2 [新冠之年：中国市场成为德企业务支柱](/articles/dw/1044106.md)
@@ -594,10 +600,4 @@
 1-18 [荷兰反新冠限制示威者遭防暴警察驱赶](/articles/dw/1044400.md)
 
 1-18 [客座评论：特朗普是中国改革的“助产士”](/articles/dw/1044401.md)
-
-1-18 [最美的极光画面](/articles/dw/1044402.md)
-
-1-18 [欲探望友人父母 两维权律师遭软禁逾24小时](/articles/dw/1044403.md)
-
-1-18 [英外长呼吁中国允许联合国探访新疆](/articles/dw/1044404.md)
 
