--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-3 [拜登政府将缅甸事变定性为“政变”，展开对缅援助审查](/articles/rfi/1035425.md)
+
+2-3 [英国百岁老兵为抗击新冠募款染疫去世，女王首相致哀](/articles/rfi/1035426.md)
+
+2-3 [窃取美国医院商业机密，华裔女科学家被判入狱2年半](/articles/rfi/1035427.md)
+
 2-3 [以色列和科索沃建交引发塞尔维亚不满](/articles/rfi/1035428.md)
 
 2-3 [发文带动股价狂飙  马斯克暂时告别推特 – 法国国际广播电台 - RFI](/articles/rfi/1035429.md)
@@ -594,10 +600,4 @@
 1-28 [全球加速出脱 欧股开低 – 法国国际广播电台 - RFI](/articles/rfi/1035723.md)
 
 1-28 [赵立坚劝美国不要干扰世卫新冠溯源专家工作 称调查方式包括座谈走访考察](/articles/rfi/1035724.md)
-
-1-28 [1月6日后美国已有3万多名共和党选民退党](/articles/rfi/1035725.md)
-
-1-28 [拜登上任首周民调支持率 胜过川普执政任何时期 – 法国国际广播电台 - RFI](/articles/rfi/1035726.md)
-
-1-28 [纽西兰敦促澳洲 应对中国展现尊重 – 法国国际广播电台 - RFI](/articles/rfi/1035727.md)
 
