--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-3 [头部房企华夏幸福爆雷  债务逾期超五十二亿](/articles/rfa/1046521.md)
+
 2-3 [哈萨克斯坦公民中领馆前示威被捕  为其新疆亲人发声](/articles/rfa/1046522.md)
 
 2-3 [中国甩锅美国疫情起源  世卫吁让国际专家自由访问](/articles/rfa/1046523.md)
@@ -598,6 +600,4 @@
 12-31 [维吾尔活动人士要求中共释放被株连重判的家人](/articles/rfa/1046819.md)
 
 12-31 [覃永沛案延后审理 戈觉平案二审裁定驳回](/articles/rfa/1046820.md)
-
-12-31 [卡关七年的欧中投资协定     为何突然成了?](/articles/rfa/1046821.md)
 
