--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-3 [专家惊呼：中国人口塌陷已经到来](/articles/rfa/1046518.md)
+
+2-3 [布林肯、杨洁篪隔空喊话   美中互亮底牌](/articles/rfa/1046519.md)
+
+2-3 [海航破产重组 亏的是国家和小股东](/articles/rfa/1046520.md)
+
 2-3 [头部房企华夏幸福爆雷  债务逾期超五十二亿](/articles/rfa/1046521.md)
 
 2-3 [哈萨克斯坦公民中领馆前示威被捕  为其新疆亲人发声](/articles/rfa/1046522.md)
@@ -594,10 +600,4 @@
 12-31 [中国疫苗有效率远低于美国  国民敢不敢注射引发热议](/articles/rfa/1046816.md)
 
 12-31 [台湾声援十二港人案    批评中国“红太阳司法”](/articles/rfa/1046817.md)
-
-12-31 [终审法院受理律政司上诉  黎智英再次还柙](/articles/rfa/1046818.md)
-
-12-31 [维吾尔活动人士要求中共释放被株连重判的家人](/articles/rfa/1046819.md)
-
-12-31 [覃永沛案延后审理 戈觉平案二审裁定驳回](/articles/rfa/1046820.md)
 
