--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-3 [缅甸军事政变：联合国安理会举行紧急闭门会议，寻求团结](/articles/rfi/1035410.md)
+
+2-3 [贝佐斯宣布将于三季度卸任亚马逊CEO职务](/articles/rfi/1035411.md)
+
+2-3 [美国务院：深切关注12港人案卢思位和任全牛律师证被吊事件](/articles/rfi/1035412.md)
+
+2-3 [缅甸军队一直都是个国中国 - 法国世界报](/articles/rfi/1035413.md)
+
 2-3 [俄罗斯卫星-V疫苗临床试验的保护效力达91.6%](/articles/rfi/1035414.md)
 
 2-3 [爱拉斯莫的生活与思想之四 走向巴黎 - 欧洲思想文化长廊](/articles/rfi/1035415.md)
@@ -592,12 +600,4 @@
 1-29 [数百名洛兴雅人从印尼难民营消失 – 法国国际广播电台 - RFI](/articles/rfi/1035708.md)
 
 1-29 [缅甸军方首长提及废宪 外界忧军事政变 – 法国国际广播电台 - RFI](/articles/rfi/1035709.md)
-
-1-28 [美经济复苏再趋缓 2020全年萎缩3.5% – 法国国际广播电台 - RFI](/articles/rfi/1035710.md)
-
-1-28 [地球暖化加速 2020成纪录上最热一年 - 环境与发展](/articles/rfi/1035711.md)
-
-1-28 [全球COVID-19确诊超过1亿82万例 逾217万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1035712.md)
-
-1-28 [担忧疫情升温 亚股全数收黑 – 法国国际广播电台 - RFI](/articles/rfi/1035713.md)
 
