--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+2-3 [穷国的民主为何总是缺乏可持续性？](/articles/ft/1046134.md)
+
+2-3 [为什么市场低估了中国2020年的增长？](/articles/ft/1046135.md)
+
 2-2 [欧洲电动汽车去年底销量激增](/articles/ft/1046136.md)
 
 2-2 [巴尔干国家转向从中俄购买疫苗](/articles/ft/1046137.md)
@@ -596,8 +600,4 @@
 12-28 [反垄断之刃挥向阿里，释放什么信号？](/articles/ft/1046432.md)
 
 12-28 [特朗普签署纾困法案 避免政府停摆](/articles/ft/1046433.md)
-
-12-28 [特朗普拒绝签署经济刺激法案](/articles/ft/1046434.md)
-
-12-28 [牛津/阿斯利康疫苗即将获英国批准](/articles/ft/1046435.md)
 
