--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-3 [「12港人案」又一律师遭吊照 美发声明谴责北京](/articles/dw/1044101.md)
+
 2-2 [首次平民太空旅游  亿万富翁馈赠三席空位](/articles/dw/1044102.md)
 
 2-2 [昂山素季与缅甸的民主运动](/articles/dw/1044103.md)
@@ -598,6 +600,4 @@
 1-18 [三星电子副会长李在镕获刑两年半](/articles/dw/1044399.md)
 
 1-18 [荷兰反新冠限制示威者遭防暴警察驱赶](/articles/dw/1044400.md)
-
-1-18 [客座评论：特朗普是中国改革的“助产士”](/articles/dw/1044401.md)
 
