--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-3 [情绪识别: 中国AI读心术的惊悚黑科技](/articles/rfa/1046517.md)
+
 2-3 [专家惊呼：中国人口塌陷已经到来](/articles/rfa/1046518.md)
 
 2-3 [布林肯、杨洁篪隔空喊话   美中互亮底牌](/articles/rfa/1046519.md)
@@ -598,6 +600,4 @@
 12-31 [自由亚洲电台年度十大新闻票选：《香港国安法》落地 大抓捕成新常态？](/articles/rfa/1046815.md)
 
 12-31 [中国疫苗有效率远低于美国  国民敢不敢注射引发热议](/articles/rfa/1046816.md)
-
-12-31 [台湾声援十二港人案    批评中国“红太阳司法”](/articles/rfa/1046817.md)
 
