--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-3 [散户抱团与监管应对（下）](/articles/ft/1046133.md)
+
 2-3 [穷国的民主为何总是缺乏可持续性？](/articles/ft/1046134.md)
 
 2-3 [为什么市场低估了中国2020年的增长？](/articles/ft/1046135.md)
@@ -598,6 +600,4 @@
 12-28 [阿里巴巴股价大跌](/articles/ft/1046431.md)
 
 12-28 [反垄断之刃挥向阿里，释放什么信号？](/articles/ft/1046432.md)
-
-12-28 [特朗普签署纾困法案 避免政府停摆](/articles/ft/1046433.md)
 
