--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+2-3 [贝索斯将卸任亚马逊首席执行官](/articles/ft/1046130.md)
+
+2-3 [阿里巴巴去年第四季度增长放缓](/articles/ft/1046131.md)
+
 2-3 [BP报告10年来首次年度亏损](/articles/ft/1046132.md)
 
 2-3 [散户抱团与监管应对（下）](/articles/ft/1046133.md)
@@ -596,8 +600,4 @@
 12-29 [未来投资理财重点：房地产还是股市？](/articles/ft/1046428.md)
 
 12-29 [健康零食，吃前看一看](/articles/ft/1046429.md)
-
-12-29 [非关第一：2021如何重新定义中美竞争](/articles/ft/1046430.md)
-
-12-28 [阿里巴巴股价大跌](/articles/ft/1046431.md)
 
