--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-3 [越南领导层换届，有望与美国加强合作应对中国](/articles/voa/1043235.md)
+
+2-3 [美国国务院：拜登政府不急于与中国接触](/articles/voa/1043236.md)
+
 2-3 [遏制中共对台威胁 美副防长人选：美台需紧密合作](/articles/voa/1043237.md)
 
 2-3 [参院弹劾审判前 众院民主党人与特朗普的律师针锋相对陈述观点](/articles/voa/1043238.md)
@@ -596,8 +600,4 @@
 1-23 [联合国禁核武条约51国赞同 独缺拥核大国](/articles/voa/1043533.md)
 
 1-22 [美英加等14国发表声明 批评中国限制新闻自由 呼吁释放张展](/articles/voa/1043534.md)
-
-1-22 [疫情波及中南海所在地，北京东西城区开展大排查](/articles/voa/1043535.md)
-
-1-22 [拜登国家安全团队的关键成员先后就位](/articles/voa/1043536.md)
 
