--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-3 [昂山素季与军方的权力游戏：缅甸的民主希望是如何破灭的](/articles/nyt/1047219.md)
+
 2-3 [异见人士郭飞雄赴美遇阻后失踪](/articles/nyt/1047220.md)
 
 2-3 [简报：异见人士郭飞雄失踪；贝佐斯将卸任亚马逊CEO](/articles/nyt/1047221.md)
@@ -598,6 +600,4 @@
 11-26 [我们共同经历的伤痛](/articles/nyt/1047517.md)
 
 11-26 [简报：习近平致电拜登祝贺其当选；足球巨星马拉多纳去世](/articles/nyt/1047518.md)
-
-11-25 [告别华盛顿在即，“贾万卡”接下来去哪？](/articles/nyt/1047519.md)
 
