--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-3 [晚点LatePost | 武汉，一年](/articles/cdt/386290.md)
+
+2-3 [德国之声 | 12港人案律师卢思位吊照听证 多人遭警带走](/articles/cdt/386291.md)
+
 2-3 [维舟 | 核酸检测三问](/articles/cdt/386292.md)
 
 2-3 [【知乎】2020年中国出生人口预计跌至1100万，2025年前预计跌至700万（贴上了证据，2.1更新）](/articles/cdt/386293.md)
@@ -596,8 +600,4 @@
 1-4 [德国之声 | 中国严控病毒起源调查　真相为何？](/articles/cdt/387525.md)
 
 1-4 [【网络民议】不要让另一位吹哨人张永振被遗忘](/articles/cdt/387535.md)
-
-1-3 [苹果日报 | 港流亡人士信用卡被取消馀额遭没收 汇丰：市场营运须符合中国法律法规](/articles/cdt/387540.md)
-
-1-3 [Gender Law Equality | 2020年十大性/别法律事件](/articles/cdt/387551.md)
 
