--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-3 [拜登尚未联络习近平 白宫：不急着对付中国](/articles/dw/1044098.md)
+
 2-3 [中俄拖延安理会行动  美国制裁缅甸军方](/articles/dw/1044099.md)
 
 2-3 [中俄拖延安理会行动  美宣布重新制裁缅甸](/articles/dw/1044100.md)
@@ -598,6 +600,4 @@
 1-18 [多数德国选民不愿看到拉舍特成为总理继任者](/articles/dw/1044396.md)
 
 1-18 [拜登“登基”大典 华府如临大敌](/articles/dw/1044397.md)
-
-1-18 [多名重症老人接种后死亡  新冠疫苗有问题？](/articles/dw/1044398.md)
 
