--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-3 [阿里巴巴计划发行美元债券 筹资50亿美元](/articles/ft/1046128.md)
+
 2-3 [欧元区经济陷入双底收缩](/articles/ft/1046129.md)
 
 2-3 [贝索斯将卸任亚马逊首席执行官](/articles/ft/1046130.md)
@@ -598,6 +600,4 @@
 12-29 [年度词汇：Recount](/articles/ft/1046426.md)
 
 12-29 [反垄断、全球化与内卷化](/articles/ft/1046427.md)
-
-12-29 [未来投资理财重点：房地产还是股市？](/articles/ft/1046428.md)
 
