--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-3 [【图说天朝】有哪些国家/地区未提供 Netflix 服务？](/articles/cdt/386286.md)
+
+2-3 [光传媒｜维权网发布《中国大陆在押政治犯、良心犯月度报告》 涉1089人](/articles/cdt/386287.md)
+
 2-3 [晚点LatePost | 武汉，一年](/articles/cdt/386290.md)
 
 2-3 [德国之声 | 12港人案律师卢思位吊照听证 多人遭警带走](/articles/cdt/386291.md)
@@ -596,8 +600,4 @@
 1-4 [多数派｜同一悲剧，上演继续—2020年性别大盘点](/articles/cdt/387523.md)
 
 1-4 [媒律圈 | 何光伟：我们应当嘉奖周泽律师](/articles/cdt/387524.md)
-
-1-4 [德国之声 | 中国严控病毒起源调查　真相为何？](/articles/cdt/387525.md)
-
-1-4 [【网络民议】不要让另一位吹哨人张永振被遗忘](/articles/cdt/387535.md)
 
