--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+2-3 [在仰光亲历缅甸政变](/articles/nyt/1047217.md)
+
+2-3 [普京并不像他看起来那么强大](/articles/nyt/1047218.md)
+
 2-3 [昂山素季与军方的权力游戏：缅甸的民主希望是如何破灭的](/articles/nyt/1047219.md)
 
 2-3 [异见人士郭飞雄赴美遇阻后失踪](/articles/nyt/1047220.md)
@@ -596,8 +600,4 @@
 11-26 [马拉多纳：越混乱越美丽，越黑暗越光明](/articles/nyt/1047515.md)
 
 11-26 [香港民主运动未死](/articles/nyt/1047516.md)
-
-11-26 [我们共同经历的伤痛](/articles/nyt/1047517.md)
-
-11-26 [简报：习近平致电拜登祝贺其当选；足球巨星马拉多纳去世](/articles/nyt/1047518.md)
 
