--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-3 [拜登政府正策划朝鲜政策 专家：显著推进半岛无核化的希望渺茫](/articles/voa/1043232.md)
+
 2-3 [五角大楼宣布将尼米兹号航母调离中东 三艘航母同时现身印太](/articles/voa/1043233.md)
 
 2-3 [港人逃港，舍弃小康如难民， 为了自由](/articles/voa/1043234.md)
@@ -598,6 +600,4 @@
 1-23 [民主活动人士丁家喜许志永被控新罪 料将受到重判](/articles/voa/1043530.md)
 
 1-23 [美国提议延长美俄《新削减战略武器条约》 俄罗斯表示欢迎](/articles/voa/1043531.md)
-
-1-23 [拜登预计签两行政令增加食物等方面补助](/articles/voa/1043532.md)
 
