--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-3 [世卫调查组进入武汉病毒研究所](/articles/ft/1046125.md)
+
 2-3 [谷歌因威胁退出澳大利亚遭微软批评](/articles/ft/1046126.md)
 
 2-3 [空间缩窄：朝鲜劳动党八大后外交局面](/articles/ft/1046127.md)
@@ -598,6 +600,4 @@
 12-29 [时尚业担心退欧后伦敦将失去吸引力](/articles/ft/1046423.md)
 
 12-29 [特朗普签署刺激法案后美国股市创新高](/articles/ft/1046424.md)
-
-12-29 [欧盟即将与中国达成投资协定](/articles/ft/1046425.md)
 
