--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-3 [香港民主反对派的最后一道防线：区议员](/articles/nyt/1047216.md)
+
 2-3 [在仰光亲历缅甸政变](/articles/nyt/1047217.md)
 
 2-3 [普京并不像他看起来那么强大](/articles/nyt/1047218.md)
@@ -598,6 +600,4 @@
 11-26 [《纽约时报》2020年度十大好书](/articles/nyt/1047514.md)
 
 11-26 [马拉多纳：越混乱越美丽，越黑暗越光明](/articles/nyt/1047515.md)
-
-11-26 [香港民主运动未死](/articles/nyt/1047516.md)
 
