--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,7 +1,9 @@
 中国数字时代
 ------
 
-2-3 [【旧闻重温】人民网｜人人字幕组  网络时代的知识布道者](/articles/cdt/386282.md)
+2-3 [【旧文重温】真实故事计划｜人人影视被查，那些年我在字幕组的日子](/articles/cdt/386279.md)
+
+2-3 [【旧文重温】人民网｜人人字幕组  网络时代的知识布道者](/articles/cdt/386282.md)
 
 2-3 [莫狄骁的山房｜这一次，无人相信天神会赐下火焰](/articles/cdt/386284.md)
 
@@ -598,6 +600,4 @@
 1-4 [【网络民议】拼多多：“底层谁不是用命换钱，这是一个用命拼的时代”](/articles/cdt/387492.md)
 
 1-4 [这个伊布不踢球F |打FACE！林郑月娥年终民调分析：评分竟不足30且有四成以上给其打0分](/articles/cdt/387518.md)
-
-1-4 [法律门前 | 仝宗锦：辩护律师可否网上发帖揭露刑讯逼供问题——兼论周泽律师拟被行政处罚案的几个具体问题](/articles/cdt/387519.md)
 
