--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-3 [“坚持正确政治方向” 中国收紧自媒体言论](/articles/dw/1044093.md)
+
+2-3 [英国百岁高龄“汤姆上尉”因新冠去世](/articles/dw/1044094.md)
+
 2-3 [连马斯克都爱  Clubhouse到底何方神圣？](/articles/dw/1044095.md)
 
 2-3 [柳叶刀：俄罗斯疫苗卫星五号有效率91.6%](/articles/dw/1044096.md)
@@ -596,8 +600,4 @@
 1-19 [德语媒体：中国体制的合法性来自哪里？](/articles/dw/1044391.md)
 
 1-18 [国际社会要求俄罗斯放人 莫斯科称西方虚伪](/articles/dw/1044392.md)
-
-1-18 [澳5名职员被控盗窃数百吨三文鱼](/articles/dw/1044393.md)
-
-1-18 [法兰克福机场客运量降至1984年水平](/articles/dw/1044394.md)
 
