--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-3 [【网络民议】如果“人人”有罪  那么人人有罪](/articles/cdt/386275.md)
+
+2-3 [【CDTV】BIE别的｜千言万语一句话：感谢字幕组](/articles/cdt/386278.md)
+
 2-3 [【旧文重温】真实故事计划｜人人影视被查，那些年我在字幕组的日子](/articles/cdt/386279.md)
 
 2-3 [【旧文重温】人民网｜人人字幕组  网络时代的知识布道者](/articles/cdt/386282.md)
@@ -596,8 +600,4 @@
 1-4 [【异闻观止】辽宁大连：母亲吃中药母乳喂养 婴儿核酸检测转阴](/articles/cdt/387481.md)
 
 1-4 [案件现场｜周泽律师：我为什么披露吕先三案刑讯逼供录像](/articles/cdt/387483.md)
-
-1-4 [【网络民议】拼多多：“底层谁不是用命换钱，这是一个用命拼的时代”](/articles/cdt/387492.md)
-
-1-4 [这个伊布不踢球F |打FACE！林郑月娥年终民调分析：评分竟不足30且有四成以上给其打0分](/articles/cdt/387518.md)
 
