--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-3 [无人聘用为由被注销执照   律师彭永和吁当局收回成命](/articles/rfa/1046512.md)
+
+2-3 [揭密拜登的中国政策幕僚 (下) –  第一个考题是台海](/articles/rfa/1046513.md)
+
 2-3 [台湾立法院长呼吁盟国 抵御极权国家控制亚太野心](/articles/rfa/1046514.md)
 
 2-3 [拜登上台两周仍未与习近平通话](/articles/rfa/1046515.md)
@@ -596,8 +600,4 @@
 1-1 [特朗普关注中国宗教人士 秋雨教会再遭打压](/articles/rfa/1046810.md)
 
 1-1 [加拿大香港难民企盼新年能获得正式身份](/articles/rfa/1046811.md)
-
-1-1 [美军最先进驱逐舰除夕通过台湾海峡](/articles/rfa/1046812.md)
-
-1-1 [因祝福达赖喇嘛   一青海果洛藏人遭判刑](/articles/rfa/1046813.md)
 
