--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-3 [昂山素季遭起诉 中俄阻挠联合国安理会谴责缅甸政变](/articles/voa/1043230.md)
+
 2-3 [春节将至 中国农民工的讨薪脱贫梦](/articles/voa/1043231.md)
 
 2-3 [拜登政府正策划朝鲜政策 专家：显著推进半岛无核化的希望渺茫](/articles/voa/1043232.md)
@@ -598,6 +600,4 @@
 1-23 [香港新冠肺炎疫情爆发一周年 民调指大部份市民不满政府抗疫表现](/articles/voa/1043528.md)
 
 1-23 [美国会议员施压拜登 要求其强硬回应中共制裁美卸任官员的行动](/articles/voa/1043529.md)
-
-1-23 [民主活动人士丁家喜许志永被控新罪 料将受到重判](/articles/voa/1043530.md)
 
