--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-3 [全球民主指数达14年新低 台湾进步最多跃东亚第一](/articles/rfa/1046510.md)
+
+2-3 [台湾西南空域美军机比解放军多 美持续释放挺台讯号](/articles/rfa/1046511.md)
+
 2-3 [无人聘用为由被注销执照   律师彭永和吁当局收回成命](/articles/rfa/1046512.md)
 
 2-3 [揭密拜登的中国政策幕僚 (下) –  第一个考题是台海](/articles/rfa/1046513.md)
@@ -596,8 +600,4 @@
 1-1 [中土引渡条约争议  土耳其保证不会将维吾尔人遣返中国](/articles/rfa/1046808.md)
 
 1-1 [美联社：中国高层指示严控新冠疫情科研信息](/articles/rfa/1046809.md)
-
-1-1 [特朗普关注中国宗教人士 秋雨教会再遭打压](/articles/rfa/1046810.md)
-
-1-1 [加拿大香港难民企盼新年能获得正式身份](/articles/rfa/1046811.md)
 
