--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-4 [缅甸政变敏将军 当年民主推手 今日掘墓人](/articles/rfi/1035344.md)
+
+2-4 [Covid-19 : 葡萄牙获德国帮助对抗疫情](/articles/rfi/1035345.md)
+
+2-4 [9比0狂扫南安普敦 曼联平英超赛史纪录 – 法国国际广播电台 - RFI](/articles/rfi/1035346.md)
+
 2-4 [中国大力扩建海军 新一代核潜艇卫星图像曝光](/articles/rfi/1035347.md)
 
 2-4 [中俄疫苗拿下巴尔干半岛？](/articles/rfi/1035348.md)
@@ -594,10 +600,4 @@
 1-30 [中国在落实积极财政政策过程中减税降费 - 今日经济](/articles/rfi/1035642.md)
 
 1-30 [黄金需求在2020年崩溃 价格却创新高](/articles/rfi/1035643.md)
-
-1-30 [诺瓦瓦克斯疫苗有效率95% 但对南非变种效力减半](/articles/rfi/1035644.md)
-
-1-30 [北京不承认BNO护照对香港人有什么实际后果？](/articles/rfi/1035645.md)
-
-1-30 [【视频】新冠病毒起源：世卫专家团正式在武汉展开实地调查](/articles/rfi/1035646.md)
 
