--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-4 [美两党议员提名香港亲民主运动获取今年诺贝尔和平奖](/articles/voa/1043221.md)
+
+2-4 [两党领袖达成协议 民主党将控制美参议院各委员会](/articles/voa/1043222.md)
+
 2-4 [时事大家谈: 严词抨击缅甸政变，拜登或首次与北京交锋？](/articles/voa/1043223.md)
 
 2-4 [Burma or Myanmar？美国对缅甸的称呼有何玄机？](/articles/voa/1043224.md)
@@ -596,8 +600,4 @@
 1-23 [彭博社：中国改头换面进口委内瑞拉石油，以规避美国制裁](/articles/voa/1043519.md)
 
 1-23 [武汉封城周年祭：沉默，不代表愤怒消失了](/articles/voa/1043520.md)
-
-1-23 [过去一年外交受挫之后 中国准备与拜登政府打交道](/articles/voa/1043521.md)
-
-1-23 [中国堵住华盛顿的“旋转门”，项庄舞剑意在沛公](/articles/voa/1043522.md)
 
