--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-4 [【网络民议】“正道无路，莫怪歧途”——人人字幕组被查事件微博热帖合集](/articles/cdt/386272.md)
+
 2-3 [【网络民议】如果“人人”有罪  那么人人有罪](/articles/cdt/386275.md)
 
 2-3 [【CDTV】BIE别的｜千言万语一句话：感谢字幕组](/articles/cdt/386278.md)
@@ -598,6 +600,4 @@
 1-4 [人间思想笔记｜比拿命换钱更惨的是拿命换不到钱](/articles/cdt/387475.md)
 
 1-4 [【异闻观止】辽宁大连：母亲吃中药母乳喂养 婴儿核酸检测转阴](/articles/cdt/387481.md)
-
-1-4 [案件现场｜周泽律师：我为什么披露吕先三案刑讯逼供录像](/articles/cdt/387483.md)
 
