--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-4 [新冠疫苗供不应求 佛罗里达州严防外来客接种](/articles/voa/1043210.md)
+
+2-4 [台北宣布在圭亚那设台湾办公室 美国政府表示欢迎和称赞](/articles/voa/1043211.md)
+
+2-4 [药房将获疫苗供应 “口罩令”进入公共交通](/articles/voa/1043212.md)
+
 2-4 [白宫要义: 拜登周四将在国务院发表外交政策讲话，将提到中国与俄罗斯](/articles/voa/1043213.md)
 
 2-4 [郭飞雄事件跟踪：中国知识分子联名致信中共高层要求放人](/articles/voa/1043214.md)
@@ -594,10 +600,4 @@
 1-24 [乌干达空袭索马里炸死近两百激进分子](/articles/voa/1043508.md)
 
 1-24 [港府首次实施封闭社区禁足令 批评者指封区成效不大](/articles/voa/1043509.md)
-
-1-24 [俄60多城市爆发抗议活动，要求当局释放纳瓦尔尼](/articles/voa/1043510.md)
-
-1-24 [拜登签署行政令，加快发放纾困支票，增加给孩子的食品援助](/articles/voa/1043511.md)
-
-1-23 [疫情反弹 河北成首都“护城河” “就地过年” 打工人客居异乡](/articles/voa/1043512.md)
 
