--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+2-4 [缅甸警方指控昂山素季违反进出口法律](/articles/ft/1046120.md)
+
+2-4 [如何像预测天气一样预测疾病？](/articles/ft/1046121.md)
+
 2-4 [FT社评：监禁纳瓦尔尼突显克里姆林宫不安](/articles/ft/1046122.md)
 
 2-4 [货币数字化应摒弃铸币思维](/articles/ft/1046123.md)
@@ -596,8 +600,4 @@
 12-30 [你的新办公室就在街角](/articles/ft/1046418.md)
 
 12-30 [2020年中国时政大事盘点](/articles/ft/1046419.md)
-
-12-29 [黄峥，上海神秘的互联网之王](/articles/ft/1046420.md)
-
-12-29 [Lex专栏：丰收下的粮食供应隐忧](/articles/ft/1046421.md)
 
