--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-4 [简报：世卫专家访问武汉病毒所；昂山素季被缅甸军方起诉](/articles/nyt/1047215.md)
+
 2-3 [香港民主反对派的最后一道防线：区议员](/articles/nyt/1047216.md)
 
 2-3 [在仰光亲历缅甸政变](/articles/nyt/1047217.md)
@@ -598,6 +600,4 @@
 11-27 [简报：贫困县斥巨资立女神像惹议；“N号房”主犯获刑40年](/articles/nyt/1047513.md)
 
 11-26 [《纽约时报》2020年度十大好书](/articles/nyt/1047514.md)
-
-11-26 [马拉多纳：越混乱越美丽，越黑暗越光明](/articles/nyt/1047515.md)
 
