--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-4 [字节跳动与腾讯再度开启诉讼大战](/articles/ft/1046118.md)
+
 2-4 [通用汽车因芯片短缺关闭三家工厂](/articles/ft/1046119.md)
 
 2-4 [缅甸警方指控昂山素季违反进出口法律](/articles/ft/1046120.md)
@@ -598,6 +600,4 @@
 12-30 [《巴黎协定》五周年，中国青年如何看待气候变化？](/articles/ft/1046416.md)
 
 12-30 [《管理华盛顿的人》：詹姆斯•贝克传](/articles/ft/1046417.md)
-
-12-30 [你的新办公室就在街角](/articles/ft/1046418.md)
 
