--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-4 [记录亚裔美国人的生活、抗争与历史：摄影师李扬国逝世](/articles/nyt/1047213.md)
+
 2-4 [昂山素季被控非法进口对讲机](/articles/nyt/1047214.md)
 
 2-4 [简报：世卫专家访问武汉病毒所；昂山素季被缅甸军方起诉](/articles/nyt/1047215.md)
@@ -598,6 +600,4 @@
 11-27 [韩国“N号房”主犯一审被判40年监禁](/articles/nyt/1047511.md)
 
 11-27 [贵州贫困县斥巨资建大型女神雕像引发争议](/articles/nyt/1047512.md)
-
-11-27 [简报：贫困县斥巨资立女神像惹议；“N号房”主犯获刑40年](/articles/nyt/1047513.md)
 
