--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+2-4 [当世界陷入“制裁疲劳”，拜登如何推动民主？](/articles/nyt/1047211.md)
+
+2-4 [从马三家到你的衣柜：廉价“中国制造”敲响的人权警钟](/articles/nyt/1047212.md)
+
 2-4 [记录亚裔美国人的生活、抗争与历史：摄影师李扬国逝世](/articles/nyt/1047213.md)
 
 2-4 [昂山素季被控非法进口对讲机](/articles/nyt/1047214.md)
@@ -596,8 +600,4 @@
 11-27 [迄今为止，本世纪最优秀的25位演员](/articles/nyt/1047509.md)
 
 11-27 [佐治亚州“翻蓝”背后：亚裔选民的崛起](/articles/nyt/1047510.md)
-
-11-27 [韩国“N号房”主犯一审被判40年监禁](/articles/nyt/1047511.md)
-
-11-27 [贵州贫困县斥巨资建大型女神雕像引发争议](/articles/nyt/1047512.md)
 
