--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-4 [鱼眼观察｜任正非道歉了，但他们不接受](/articles/cdt/386249.md)
+
+2-4 [程益中｜刻意抵赖病毒起源地，既愚昧又卑劣](/articles/cdt/386251.md)
+
 2-4 [蔡霞：请将人道主义漂亮宣传口号付诸行动自放行郭飞雄赴美做起](/articles/cdt/386253.md)
 
 2-4 [枪稿 | 人人字幕这架梯子，断了|杨时旸专栏](/articles/cdt/386259.md)
@@ -596,8 +600,4 @@
 1-5 [豹变｜为拼多多守边疆的女孩，凌晨倒在了-20℃的冬夜](/articles/cdt/387464.md)
 
 1-4 [新浪科技｜拼多多为知乎账号“管控不严”道歉：系供应商员工发布](/articles/cdt/387468.md)
-
-1-4 [自由亚洲｜习近平向全军发布开训动员令：确保全时待战、随时能战！](/articles/cdt/387472.md)
-
-1-4 [每日人物｜那些离开互联网大厂的年轻人](/articles/cdt/387474.md)
 
